# split_words

./: .gitignore  MANIFEST.in  setup.py
rust/split_words/: Cargo.toml  pyproject.toml
rust/split_words/src/: lib.rs
split_words/: __init__.py  split_words.py
tests/: test.py
